--- a/photo_to_mongodb/package.json
+++ b/photo_to_mongodb/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "ejs": "^3.1.10",
+    "exif": "^0.6.0",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "multer": "^1.4.5-lts.1"
