--- a/photo_and_register/package.json
+++ b/photo_and_register/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "exif": "^0.6.0",
     "express": "^4.19.2",
